--- a/backend_2/package.json
+++ b/backend_2/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "frida-adaction-felix_florian_meyko",
+  "name": "backend",
   "version": "1.0.0",
-  "type": "module",
-  "description": "- initialiserer le serveur back-end à l'aide de Nodemon, Express et Cors\r - créer les routes GET, POST, PATCH, DELETE dans le fichier serveur.js\r - créer les scripts de front-end\r - afficher l'application avec HTML",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/adatechschool/frida-adaction-felix_florian_meyko.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/adatechschool/frida-adaction-felix_florian_meyko/issues"
-  },
-  "homepage": "https://github.com/adatechschool/frida-adaction-felix_florian_meyko#readme",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10",
-    "pg": "^8.16.3"
+    "nodemon": "^3.1.10"
   }
 }
